update CV, bio, and recent news

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ function toggle(elt_id, force_visible) {
       <div class="row" id="about">
         <h3 class="mb0">About Me</h3>
         <hr class="mt0">
-	<p><span style="color:#cc3d21">this website is under construction</span>: I've recently finished my PhD and am working on getting everything up-to-date.</p>
 	<p>
 	I am a software engineer and computer scientist based in London, UK. I'm currently working on static analysis tools at <a href="https://fbinfer.com/">Meta</a>.</p>
         <p>I earned a PhD in Computer Science from the University of Colorado Boulder in 2022, where I was advised by Professor <a href="http://cs.colorado.edu/~bec">Evan Chang</a> as a member of the <a href="https://plv.colorado.edu">CUPLV</a> group.
 	  Before that, I graduated from <a href="http://www.williams.edu">Williams College</a> in 2015 with a BA in Mathematics and Computer Science.</p>
+	<p>Feel free to get in touch over email or twitter if you're looking for something here that seems to be missing -- this website is less frequently updated than it once was!</p>
       </div>
 
       <div class="row" id="research">
@@ -67,7 +67,7 @@ function toggle(elt_id, force_visible) {
         <hr class="mt0">
         <p>I am interested in building <b>static analysis</b> tools and formalisms that are able to handle the complexities of modern software development. My dissertation focused on <b>incremental</b> and demand-driven <b>abstract interpretation</b>.</p>
 
-	<p>I've worked in the past on a range of program analysis topics in both academia and industry, including static analysis of dynamic languages, refinement type systems, type inference, and bounded symbolic execution.</p>
+	<p>I've worked in the past on a range of program analysis topics in both academia and industry, including static analysis of dynamic languages, refinement type systems, type inference, and goal-directed analysis.</p>
       </div>
     </div>
   </div>
@@ -80,6 +80,23 @@ function toggle(elt_id, force_visible) {
   <div class="row" id="news" style="display:none">
     <div class="row m0"></div>
 
+      <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
+          <h4><b style="color:#49c484">Seminar @ TU Munich</b></h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5><i>Munich, July 2021</i></h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  I gave a talk (remotely) on my dissertation work on incremental and demand-driven abstract interpretation at the ConVeY Seminar at TU Munich.
+        </div>
+      </div>
+    </div>
       <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
         <div class="col">
@@ -96,6 +113,24 @@ function toggle(elt_id, force_visible) {
         </div>
 	<div class="col" style="text-align:right">
 	  <a class="p1 btn" href="dissertation.pdf">dissertation</a> <a class="p1 btn" href="dissertation-slides.odp">slides</a>
+        </div>
+      </div>
+    </div>
+
+      <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
+          <h4><b style="color:#49c484">Started @ Meta</b></h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5><i>London, UK, February 2021</i></h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  I've taken a job as a Software Engineer in the Continuous Verification Lab at Meta London.  I'm excited to work on industrial applications of static analysis while also exploring cutting-edge research and working with a great group of smart people.  You can see what we're working on in the open-source Infer <a href="github.com/facebook/infer">repo</a>.
         </div>
       </div>
     </div>
