add Infer workshop stuff, update CV

--- a/index.html
+++ b/index.html
@@ -79,15 +79,35 @@ function toggle(elt_id, force_visible) {
 
   <div class="row" id="news" style="display:none">
     <div class="row m0"></div>
+    <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
+          <h4><b style="color:#49c484">Infer Workshop @ PLDI </b></h4>
+        </div>
 
-      <div class="row mt0 mb0 ph1">
+        <div class="col" style="text-align:right">
+          <h5><i>Orlando, FL, June 2023</i></h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  I gave a talk on incremental program analysis at the 2023 Infer Workshop, outlining the history of Infer's incremental infrastructure, recent improvements that I've made, and our plans for further extensions going forward.
+        </div>
+	<div class="col" style="text-align:right">
+	  <a class="p1 btn" href="https://www.youtube.com/watch?v=_wPTcXuAWPY&t=21060s">recording</a> <a class="p1 btn" href="IncrInfer.key">slides</a>
+        </div>
+
+      </div>
+    </div>
+    <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
         <div class="col">
           <h4><b style="color:#49c484">Seminar @ TU Munich</b></h4>
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Munich, July 2021</i></h5>
+          <h5><i>Munich, July 2022</i></h5>
         </div>
       </div>
 
