--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function toggle(elt_id, force_visible) {
         <hr class="mt0">
 	<p>
 	I am a software engineer and computer scientist based in London, UK. I'm currently working on static analysis tools at <a href="https://fbinfer.com/">Meta</a>.</p>
-        <p>I earned a PhD in Computer Science from the University of Colorado Boulder in 2022, where I was advised by Professor <a href="http://cs.colorado.edu/~bec">Evan Chang</a> as a member of the <a href="https://plv.colorado.edu">CUPLV</a> group.
+        <p>I earned a PhD in Computer Science from the University of Colorado Boulder in 2022, where I was advised by Professor <a href="http://cs.colorado.edu/~bec">Bor-Yuh Evan Chang</a> as a member of the <a href="https://plv.colorado.edu">CUPLV</a> group.
 	  Before that, I graduated from <a href="http://www.williams.edu">Williams College</a> in 2015 with a BA in Mathematics and Computer Science.</p>
 	<p>Feel free to get in touch over email or twitter if you're looking for something here that seems to be missing -- this website is less frequently updated than it once was!</p>
       </div>
