update with new job, links to new skiplabs website

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ function toggle(elt_id, force_visible) {
     <div class="4 col" style="text-align: center">
       <h1>Benno Stein</h1><img class="b-green" src="assets/alt_headshot.png" style="max-width: 100%; height: auto">
       <hr>
-      <h4>Computer Scientist, PhD</h4>
-      <h4>Software Engineer at Meta</h4>
+      <h5>Computer Scientist, PhD</h5>
+      <h5>Software Engineer at SkipLabs</h5>
 
       <p><a href="mailto:Benno%20Stein">first dot last at gmail</a><br></p>
       <hr>
@@ -56,7 +56,7 @@ function toggle(elt_id, force_visible) {
         <h3 class="mb0">About Me</h3>
         <hr class="mt0">
 	<p>
-	I am a software engineer and computer scientist based in London, UK. I'm currently working on static analysis tools at <a href="https://fbinfer.com/">Meta</a>.</p>
+	I am a software engineer and computer scientist based in London, UK. I'm currently working on reactive and incremental systems at <a href="https://skiplabs.io">SkipLabs</a>.</p>
         <p>I earned a PhD in Computer Science from the University of Colorado Boulder in 2022, where I was advised by Professor <a href="http://cs.colorado.edu/~bec">Bor-Yuh Evan Chang</a> as a member of the <a href="https://plv.colorado.edu">CUPLV</a> group.
 	  Before that, I graduated from <a href="http://www.williams.edu">Williams College</a> in 2015 with a BA in Mathematics and Computer Science.</p>
 	<p>Feel free to get in touch over email or twitter if you're looking for something here that seems to be missing -- this website is less frequently updated than it once was!</p>
@@ -79,6 +79,26 @@ function toggle(elt_id, force_visible) {
 
   <div class="row" id="news" style="display:none">
     <div class="row m0"></div>
+    <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
+          <h4><b style="color:#49c484">Started @ SkipLabs</b></h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5><i>September 2023</i></h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  I am now working as a Software Engineer at <a href="https://skiplabs.io">SkipLabs</a>, building infrastructure, tools, and languages for reactive and incremental systems.
+        </div>
+	<div class="col" style="text-align:right">
+        </div>
+
+      </div>
+    </div>
     <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
         <div class="col">
@@ -144,7 +164,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>London, UK, February 2021</i></h5>
+          <h5><i>London, UK, February 2022</i></h5>
         </div>
       </div>
 
