--- a/index.html
+++ b/index.html
@@ -82,11 +82,34 @@ function toggle(elt_id, force_visible) {
     <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
         <div class="col">
+          <h4><b style="color:#49c484">Paper @ TOPLAS '24</b></h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5>January 2024</h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  Our paper <i>Interactive Abstract Interpretation with Demanded
+	  Summarization</i> (with Manu Sridharan and Bor-Yuh Evan Chang) was
+	  accepted at <a href="https://dl.acm.org/doi/10.1145/3648441">TOPLAS</a>.
+        </div>
+	<div class="col" style="text-align:right">
+          <a class="p1 btn" href="toplas24.pdf">paper</a>
+        </div>
+
+      </div>
+    </div>
+    <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
           <h4><b style="color:#49c484">Started @ SkipLabs</b></h4>
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>September 2023</i></h5>
+          <h5>September 2023</h5>
         </div>
       </div>
 
@@ -106,7 +129,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Orlando, FL, June 2023</i></h5>
+          <h5>Orlando, FL, June 2023</h5>
         </div>
       </div>
 
@@ -127,7 +150,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Munich, July 2022</i></h5>
+          <h5>Munich, July 2022</h5>
         </div>
       </div>
 
@@ -144,7 +167,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>London, UK / Boulder, CO, March 2022</i></h5>
+          <h5>London, UK / Boulder, CO, March 2022</h5>
         </div>
       </div>
       <div class="row ml1 ph2">
@@ -164,7 +187,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>London, UK, February 2022</i></h5>
+          <h5>London, UK, February 2022</h5>
         </div>
       </div>
 
@@ -182,7 +205,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Boulder, Colorado, September 2021</i></h5>
+          <h5>Boulder, Colorado, September 2021</h5>
         </div>
       </div>
 
@@ -200,7 +223,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Virtual, June 2021</i></h5>
+          <h5>Virtual, June 2021</h5>
         </div>
       </div>
 
@@ -222,7 +245,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Boulder, Colorado, February 2021</i></h5>
+          <h5>Boulder, Colorado, February 2021</h5>
         </div>
       </div>
 
@@ -244,7 +267,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Athens, Greece, October 2019</i></h5>
+          <h5>Athens, Greece, October 2019</h5>
         </div>
       </div>
 
@@ -266,7 +289,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>London, UK, Fall 2019</i></h5>
+          <h5>London, UK, Fall 2019</h5>
         </div>
       </div>
 
@@ -288,7 +311,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Montpellier, France, September 2018</i></h5>
+          <h5>Montpellier, France, September 2018</h5>
         </div>
       </div>
 
@@ -310,7 +333,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Sunnyvale, CA, Summer 2018</i></h5>
+          <h5>Sunnyvale, CA, Summer 2018</h5>
         </div>
       </div>
 
@@ -332,7 +355,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Los Angeles, CA, January 2018</i></h5>
+          <h5>Los Angeles, CA, January 2018</h5>
         </div>
       </div>
 
@@ -350,7 +373,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Palo Alto, CA, Summer 2017</i></h5>
+          <h5>Palo Alto, CA, Summer 2017</h5>
         </div>
       </div>
 
@@ -372,7 +395,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Eugene, OR, June 2016</i></h5>
+          <h5>Eugene, OR, June 2016</h5>
         </div>
       </div>
 
@@ -390,7 +413,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="4 col" style="text-align:right">
-          <h5><i>Santa Barbara, CA, June 2016</i></h5>
+          <h5>Santa Barbara, CA, June 2016</h5>
         </div>
       </div>
 
@@ -412,7 +435,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>Washington D.C., February 2016</i></h5>
+          <h5>Washington D.C., February 2016</h5>
         </div>
       </div>
 
@@ -430,7 +453,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>St. Petersburg, FL, January 2016</i></h5>
+          <h5>St. Petersburg, FL, January 2016</h5>
         </div>
       </div>
 
@@ -453,11 +476,37 @@ function toggle(elt_id, force_visible) {
     <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
         <div class="col">
+          <h4 style="color:#49c484">Interactive Abstract Interpretation with Demanded Summarization</h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5>TOPLAS '24</h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="8 col newsitem">
+          <b>Benno Stein</b>, Bor-Yuh Evan Chang, Manu Sridharan.<br>
+          <i>ACM Transactions on Programming Languages and Systems (<b>TOPLAS '24</b>)</i>
+        </div>
+
+        <div class="m1 col">
+          <a class="p1 btn b-green" href="toplas24.pdf">pdf</a>
+        </div>
+	<div class="m1 col">
+	  <a class="p1 btn b-green" href="https://dl.acm.org/doi/10.1145/3648441">ACM DL</a>
+	</div>
+      </div>
+    </div>
+
+    <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
           <h4 style="color:#49c484">Demanded Abstract Interpretation</h4>
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>PLDI '21</i></h5>
+          <h5>PLDI '21</h5>
         </div>
       </div>
 
@@ -487,7 +536,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>OOPSLA '19</i></h5>
+          <h5>OOPSLA '19</h5>
         </div>
       </div>
 
@@ -519,7 +568,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="col" style="text-align:right">
-          <h5><i>ASE '18</i></h5>
+          <h5>ASE '18</h5>
         </div>
       </div>
 
